# grid

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: .gitkeep
db/: __init__.py  connection.py  migrate.py
db/migrations/: 0001_init.sql  0002_seed_reference_locations.sql  0003_capacity_timeline.sql
docs/: build-plan.md  data-sources.md  founding-thesis.md
ingestion/: __init__.py  capaciteitskaart.py  cbs_postcode6.py  investeringsplannen_liander.py  run.py
provenance/: __init__.py  report_gate.py  sources.py
reports/: .gitkeep
scripts/: db-up.sh
tests/: test_capaciteitskaart.py  test_cbs_postcode6.py  test_cbs_postcode6_integration.py  test_investeringsplannen_integration.py  test_investeringsplannen_liander.py  test_provenance.py  test_upsert_integration.py
web/: .gitkeep
